5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1692_1105.log
== TEST (2019-04-24 15:51:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x==stark):
	  print("Animal: Tartaruga")
else:
	  print("Animal: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x==stark):
NameError: name 'stark' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:52:12) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x=="stark"):
	  print("Animal: Tartaruga")
else:
	  print("Animal: Invalido")
-- OUTPUT:
Entrada:  lula
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 16:00:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x==lobo):
	  print("Casa: Stark")
elif(x==leao):
	  print("Casa: Lannister")
elif(x=="veado"):
	  print("Casa: Baratheon")
elif(x=="dragao"):
	  print("Casa: Targaryen")
elif(x=="rosa"):
	  print("Casa: 	Tyrell")
elif(x=="sol"):
	  print("Casa: Martell")
elif(x=="lula"):
	  print("Casa: Greyjoy")
elif(x=="esfolado"):
	  print("Casa: Bolton")
elif(x=="turta"):
	  print("Casa: tully")
else:
	  print("Brasao invalido")
-- EXECUTION TIME:
0.196447
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1692/1105/main.py", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 16:01:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x==lobo):
	  print("Casa: Stark")
elif(x==leao):
	  print("Casa: Lannister")
elif(x=="veado"):
	  print("Casa: Baratheon")
elif(x=="dragao"):
	  print("Casa: Targaryen")
elif(x=="rosa"):
	  print("Casa: 	Tyrell")
elif(x=="sol"):
	  print("Casa: Martell")
elif(x=="lula"):
	  print("Casa: Greyjoy")
elif(x=="esfolado"):
	  print("Casa: Bolton")
elif(x=="turta"):
	  print("Casa: tully")
else:
	  print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 16:01:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x=="lobo"):
	  print("Casa: Stark")
elif(x=="leao"):
	  print("Casa: Lannister")
elif(x=="veado"):
	  print("Casa: Baratheon")
elif(x=="dragao"):
	  print("Casa: Targaryen")
elif(x=="rosa"):
	  print("Casa: 	Tyrell")
elif(x=="sol"):
	  print("Casa: Martell")
elif(x=="lula"):
	  print("Casa: Greyjoy")
elif(x=="esfolado"):
	  print("Casa: Bolton")
elif(x=="turta"):
	  print("Casa: tully")
else:
	  print("Brasao invalido")
-- EXECUTION TIME:
0.151118
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 18:31:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x=="lobo"):
	  print("Casa: Stark")
elif(x=="leao"):
	  print("Casa: Lannister")
elif(x=="veado"):
	  print("Casa: Baratheon")
elif(x=="dragao"):
	  print("Casa: Targaryen")
elif(x=="rosa"):
	  print("Casa: 	Tyrell")
elif(x=="sol"):
	  print("Casa: Martell")
elif(x=="lula"):
	  print("Casa: Greyjoy")
elif(x=="esfolado"):
	  print("Casa: Bolton")
elif(x=="turta"):
	  print("Casa: tully")
else:
	  print("Brasao invalido")
-- EXECUTION TIME:
0.202254
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:43:03) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x=="lobo"):
	  print("Casa: Stark")
elif(x=="leao"):
	  print("Casa: Lannister")
elif(x=="veado"):
	  print("Casa: Baratheon")
elif(x=="dragao"):
	  print("Casa: Targaryen")
elif(x=="rosa"):
	  print("Casa: 	Tyrell")
elif(x=="sol"):
	  print("Casa: Martell")
elif(x=="lula"):
	  print("Casa: Greyjoy")
elif(x=="esfolado"):
	  print("Casa: Bolton")
elif(x=="turta"):
	  print("Casa: tully")
else:
	  print("Brasao invalido")
-- EXECUTION TIME:
0.135856
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:54:39) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x=input("brasao:     ")
print("Entrada: ",x)
if(x=="lobo"):
	  print("Casa: Stark")
elif(x=="leao"):
	  print("Casa: Lannister")
elif(x=="veado"):
	  print("Casa: Baratheon")
elif(x=="dragao"):
	  print("Casa: Targaryen")
elif(x=="rosa"):
	  print("Casa: 	Tyrell")
elif(x=="sol"):
	  print("Casa: Martell")
elif(x=="lula"):
	  print("Casa: Greyjoy")
elif(x=="esfolado"):
	  print("Casa: Bolton")
elif(x=="turta"):
	  print("Casa: tully")
else:
	  print("Brasao invalido")
-- EXECUTION TIME:
0.196393
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
